--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -43,5 +46,20 @@
         <action
             android:id="@+id/action_homeFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_manageEntriesFragment"
+            app:destination="@id/manageEntriesFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/manageEntriesFragment"
+        android:name="com.example.tcc.ManageEntriesFragment"
+        android:label="fragment_manage_entries"
+        tools:layout="@layout/fragment_manage_entries" >
+        <action
+            android:id="@+id/action_manageEntriesFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_manageEntriesFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
